# SportsWebistePOC

./: .gitignore  .pre-commit-config.yaml  README.md  app.py  constants.py  database_cmds.py  process_attendance_data.py  pyproject.toml  sample.csv
api/: backend.py
database/: database.db  database_cmds.py  webview.py
downloads/: cancelled_sessions.json
functions/: check_attendance_quota.py
sports/: calendar.py  sportsinfo.py  summarise_individual_sport.py  summary.py
static/css/: new.css  style.css
static/js/: script.js
student/: portal.py
templates/: base.html  calendar.html  db-view.html  home.html  index.html  loading.html  sport_info.html  student-portal.html  upload.html
uploads/: dummy_student_sports_data.xlsx  realistic_data.xlsx
