[project]
name = "SportsWebistePOC"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "unseeyou", email = "unseeyoubestmod@gmail.com"},
]
dependencies = [
    "flask>=3.1.0",
    "flask-wtf>=1.2.2",
    "wtforms>=3.2.1",
    "colorlog>=6.9.0",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false


[dependency-groups]
dev = [
    "ruff>=0.10.0",
    "pre-commit>=4.1.0",
]
